# Query_based_system

./: main.py  pyproject.toml  requirement.txt
chroma_db/dc06d728-384e-496e-a825-0670e57c8aa2/: index_metadata.pickle
notebook/: FSAM_RAG_Notebook.ipynb
