[project]
name = "query-based-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.0,<0.7.0",
    "huggingface-hub>=0.23.0",
    "langchain==0.3.22",
    "langchain-chroma==0.2.3",
    "langchain-community==0.3.20",
    "langchain-core==0.3.56",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.3.2",
    "langchain-openai==0.3.11",
    "openai>=1.68.2",
    "pandas>=3.0.1",
    "pydantic>=2.7.0,<2.12.0",
    "pydantic-core>=2.18.0,<2.33.0",
    "pymupdf>=1.26.7",
    "pypdf>=6.7.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.7.0",
    "tiktoken>=0.7.0",
    "typing-extensions>=4.14.0",
]
